--- a/metadata.yaml
+++ b/metadata.yaml
@@ -57,5 +57,6 @@ subjects:
 - !lcc 'B'
 - !lcsh 'Criticism (Philosophy)'
 - !lcsh 'Philosophy -- Dictionaries'
+- GITenberg
 title: A Philosophical Dictionary, Volume 10
 url: http://www.gutenberg.org/ebooks/35630
